# discord-cal-bot

./: .gitignore  Cargo.toml  config.example.yml
src/: config.rs  database.rs  main.rs  tasks.rs
src/discord/: bot.rs  commands.rs  events.rs  mod.rs
src/google_calendar/: calendar.rs  google_oauth.rs  mod.rs  webhooks.rs
