[package]
name = "discord-cal-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11", features = ["builder"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
axum = "0.6"
anyhow = "1.0.71"
tokio = { version = "1.23.0", features = ["full"] }
localtunnel-client = "0.1.2"
uuid = {version = "1.4.1",features = ["v4", "fast-rng", "macro-diagnostics"]}
google-calendar = "0.7.0"
oauth2 = "4.4.2"
